@@ -689,6 +689,7 @@ void upsdrv_makevartable(void)
 {
 	/* NOTE: This driver uses a very custom device matching method,
 	 * so does not involve nut_usb_addvars() method like others do.
+	 * When fixing, see also tools/nut-scanner/scan_usb.c "exceptions".
 	 */
 	addvar(VAR_VALUE, "vendor", "USB vendor string (or NULL if none)");
 }
