@@ -746,6 +746,7 @@ void upsdrv_makevartable(void)
 {
 	/* allow -x vendor=X, vendorid=X, product=X, productid=X, serial=X */
 	/* TODO: Uncomment while addressing https://github.com/networkupstools/nut/issues/1768
-	nut_usb_addvars();
+	 * When fixing, see also tools/nut-scanner/scan_usb.c "exceptions".
+	 * nut_usb_addvars();
 	*/
 }
